[workspace]
resolver = "2"
members = [
    "dco2",
    "dco2-aws-lambda",
    "dco2-server"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.90.0"

[workspace.dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.10.1"
cached = { version = "0.56.0", features = ["async"] }
clap = { version = "4.5.48", features = ["derive"] }
chrono = "0.4.42"
email_address = "0.2.9"
figment = { version = "0.10.19", features = ["yaml", "env"] }
hmac = "0.12.1"
hex = "0.4.3"
http = "1.3.1"
indoc = "2.0.6"
lambda_http = "0.17.0"
mockall = "0.13.1"
octorust = "0.10.0"
pem = "3.0.5"
pretty_assertions = "1.4.1"
regex = "1.11.2"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["auth", "fs", "set-header", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
