[workspace]
resolver = "2"
members = [
    "dco2",
    "dco2-aws-lambda",
    "dco2-server"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.96.1"

[workspace.dependencies]
anyhow = "1.0.103"
askama = "0.16.0"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
base64 = "0.22.1"
bytes = "1.12.0"
cached = { version = "2.0.2", features = ["async"] }
clap = { version = "4.6.1", features = ["derive"] }
chrono = "0.4.45"
email_address = "0.2.9"
figment = { version = "0.10.19", features = ["yaml", "env"] }
hmac = "0.13.0"
hex = "0.4.3"
http = "1.4.2"
indoc = "2.0.7"
lambda_http = "1.2.1"
mockall = "0.15.0"
octorust = "0.10.0"
pem = "3.0.6"
pretty_assertions = "1.4.1"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = [
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["auth", "fs", "set-header", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
