[package]
name = "dco2"
description = "DCO2 core library"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
askama = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
email_address = { workspace = true }
http = { workspace = true }
octorust = { workspace = true }
pem = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
mockall = { workspace = true }
